--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 </div>
 
 
-<div class="container-fluid">
+<div id="about" class="container-fluid">
  <div class="row">
    <div class="col-sm-1"></div>
    <div class="col-sm-10">
-    <p>In this challenging oil price environment what sets us apart from our competition is our ability to provide high quality, yet economical, subsurface consulting services. Our consultants are not only highly experienced, but also experts in using modern, state-of-the-art technology and methods to design solutions and provide answers.</p>
+     <h2>About AusExperts</h2>
+      <p>In this challenging oil price environment what sets us apart from our competition is our ability to provide high quality, yet economical, subsurface consulting services. Our consultants are not only highly experienced, but also experts in using modern, state-of-the-art technology and methods to design solutions and provide answers.</p>
     <img class="img-responsive" src="FrontPage_1.png">
    </div>
    <div class="col-sm-1"></div>
@@ -43,7 +44,9 @@
         <img src="OurTeam.jpg" alt="Team">
         <p><strong>Our Team</strong></p>
         <p>Our consultants are highly qualified geoscientists and engineers who have worked on projects which span the globe.<br>They have been involved in numerous reservoir studies, field development planning, reservoir management and surveillance projects, underpinning their expertise in respective areas.</p>
-        <button class="btn btn-lg text-center">Team</button>
+        <div style="text-align:center">
+          <button class="btn btn-lg">Team</button>
+        </div>
       </div>
     </div>
     <div class="col-sm-4">
@@ -51,7 +54,9 @@
         <img src="OurSolutions.jpg" alt="Solutions">
         <p><strong>Our Solutions</strong></p>
         <p>Our consulting services encompass the entire range of subsurface deliverables, through exploration, appraisal, development and ongoing reservoir management.<br>We provide services for geophysics, petrophysics, geology, geophysics, reservoir engineering and petroleum engineering.</p>
-        <button class="btn btn-lg text-center">Solutions</button>
+        <div style="text-align:center">
+          <button class="btn btn-lg">Solutions</button>
+        </div>
       </div>
     </div>
     <div class="col-sm-4">
@@ -59,7 +64,10 @@
         <img src="OurProjects.jpg" alt="Projects">
         <p><strong>Projects</strong></p>
         <p>Bla bla bla</p>
-        <button class="btn btn-lg text-center">Projects</button>
+        <div style="text-align:center">
+          <button class="btn btn-lg">Projects</button>
+        </div>
+        
       </div>
     </div>
 </div>
@@ -95,7 +103,58 @@
   </div>
 </div>
 
+<!-- Google maps -->
+<!-- Set height and width with CSS -->
+<div id="googleMap" style="height:400px;width:100%;"></div>
 
+<!-- Add Google Maps -->
+<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script>
+var myCenter = new google.maps.LatLng(-31.895486, 115.779362);
+
+function initialize() {
+var mapProp = {
+center:myCenter,
+zoom:14,
+scrollwheel:false,
+draggable:false,
+mapTypeId:google.maps.MapTypeId.ROADMAP
+};
+
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+var marker = new google.maps.Marker({
+position:myCenter,
+});
+
+marker.setMap(map);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+
+<!-- Navigation - required in all pages? -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">Logo</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#services">SERVICES</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#pricing">PRICING</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 
 </body>
