--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>AusExperts Subsurface Consulting</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300,700,900|Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -16,7 +17,7 @@
       <div class="col-sm-4">
         <img src="AEfinal.png">
       </div>
-      <div class="col-sm-8"><h1>Aus<span style="color:#1b34b1">Experts</span> Subsurface Consulting</h1></div>
+      <div class="col-sm-8"><h1>Aus<span style="color:#c60c0c">Experts</span> Subsurface Consulting</h1></div>
     </div>
     <div class="row">
       <p>AusExperts is a subsurface consulting organization engaged in providing high quality subsurface consulting services to the upstream oil and gas industry. Our consulting services encompass the entire range of subsurface deliverables through exploration, appraisal, development and ongoing reservoir management. We provide services for geology, geophysics, petrophysics, reservoir and petroleum engineering</p>
@@ -24,7 +25,7 @@
  
 </div>
 
-
+<!-- ABOUT-->
 <div id="about" class="container-fluid">
  <div class="row">
    <div class="col-sm-1"></div>
@@ -36,7 +37,8 @@
    <div class="col-sm-1"></div>
  </div>
 
-<div class="container-fluid bg-grey">
+<!-- Descriptions -->
+<div id="descriptions" class="container-fluid bg-grey">
 
   <div class="row">
     <div class="col-sm-4">
@@ -88,10 +90,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#pricing">PRICING</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#descriptions">TEAM</a></li>
+        <li><a href="#descriptions">SOLUTIONS</a></li>
+        <li><a href="#descriptions">PROJECTS</a></li>
+        <li><a href="#descriptions">CONTACT</a></li>
       </ul>
     </div>
   </div>
