--- a/Company.html
+++ b/Company.html
@@ -13,8 +13,193 @@
   
   <link rel="shortcut icon" href="AEfinal.png" type="image/x-icon" />
   <link rel="stylesheet" href="style1.css">
-
-
+  <style>
+  /*
+    body {
+      font: 400 15px Lato, sans-serif;
+      line-height: 1.8;
+      color: #818181;
+  }
+  h2 {
+      font-size: 24px;
+      text-transform: uppercase;
+      color: #303030;
+      font-weight: 600;
+      margin-bottom: 30px;
+  }
+  h4 {
+      font-size: 19px;
+      line-height: 1.375em;
+      color: #303030;
+      font-weight: 400;
+      margin-bottom: 10px;
+  }  
+  .jumbotron {
+      background-color: #000f70;
+      color: #fff;
+      padding: 100px 25px;
+      font-family: Montserrat, sans-serif;
+  }
+  .container-fluid {
+      padding: 60px 50px;
+  }
+  .bg-grey {
+      background-color: #f6f6f6;
+  }
+  .logo-small {
+      color: #000f70;
+      font-size: 50px;
+  }
+  .logo {
+      color: #000f70;
+      font-size: 200px;
+  }
+  .thumbnail {
+      padding: 0 0 15px 0;
+      border: none;
+      border-radius: 0;
+  }
+  .thumbnail img {
+      width: 100%;
+      height: 100%;
+      margin-bottom: 10px;
+  }
+  .carousel-control.right, .carousel-control.left {
+      background-image: none;
+      color: #000f70;
+  }
+  .carousel-indicators li {
+      border-color: #000f70;
+  }
+  .carousel-indicators li.active {
+      background-color: #000f70;
+  }
+  .item h4 {
+      font-size: 19px;
+      line-height: 1.375em;
+      font-weight: 400;
+      font-style: italic;
+      margin: 70px 0;
+  }
+  .item span {
+      font-style: normal;
+  }
+  .panel {
+      border: 1px solid #000f70; 
+      border-radius:0 !important;
+      transition: box-shadow 0.5s;
+  }
+  .panel:hover {
+      box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+  }
+  .panel-footer .btn:hover {
+      border: 1px solid #000f70;
+      background-color: #fff !important;
+      color: ##000f70;
+  }
+  .panel-heading {
+      color: #fff !important;
+      background-color: #000f70 !important;
+      padding: 25px;
+      border-bottom: 1px solid transparent;
+      border-top-left-radius: 0px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+  }
+  .panel-footer {
+      background-color: white !important;
+  }
+  .panel-footer h3 {
+      font-size: 32px;
+  }
+  .panel-footer h4 {
+      color: #aaa;
+      font-size: 14px;
+  }
+  .panel-footer .btn {
+      margin: 15px 0;
+      background-color: #000f70;
+      color: #fff;
+  }
+  .navbar {
+      margin-bottom: 0;
+      background-color: #000f70;
+      z-index: 9999;
+      border: 0;
+      font-size: 12px !important;
+      line-height: 1.42857143 !important;
+      letter-spacing: 4px;
+      border-radius: 0;
+      font-family: Montserrat, sans-serif;
+  }
+  .navbar li a, .navbar .navbar-brand {
+      color: #fff !important;
+  }
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+      color: #000f70 !important;
+      background-color: #fff !important;
+  }
+  .navbar-default .navbar-toggle {
+      border-color: transparent;
+      color: #fff !important;
+  }
+  footer .glyphicon {
+      font-size: 20px;
+      margin-bottom: 20px;
+      color: #000f70;
+  }
+  .slideanim {visibility:hidden;}
+  .slide {
+      animation-name: slide;
+      -webkit-animation-name: slide;	
+      animation-duration: 1s;	
+      -webkit-animation-duration: 1s;
+      visibility: visible;			
+  }
+  @keyframes slide {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(70%);
+    } 
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0%);
+    }	
+  }
+  @-webkit-keyframes slide {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(70%);
+    } 
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0%);
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .col-sm-4 {
+      text-align: center;
+      margin: 25px 0;
+    }
+    .btn-lg {
+        width: 100%;
+        margin-bottom: 35px;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    .logo {
+        font-size: 150px;
+    }
+  }
+  
+  .teampics {
+    max-width:100%;
+    max-height:250px;
+    border:;
+  }
+  */
+  </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
@@ -27,15 +212,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="#">HOME</a>
+      <a class="navbar-brand" href="index.html">HOME</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html#about">ABOUT</a></li>
-        <li><a href="#team">TEAM</a></li>
-        <li><a href="index.html">SOLUTIONS</a></li>
-        <li><a href="index.html">PROJECTS</a></li>
-        <li><a href="index.html">CONTACT</a></li>
+        <li><a href="#descriptions">TEAM</a></li>
+        <li><a href="#descriptions">SOLUTIONS</a></li>
+        <li><a href="#descriptions">PROJECTS</a></li>
+        <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
@@ -43,14 +228,14 @@
 
 
 <!-- Container (Services Section) -->
-<div id="team" class="container-fluid text-center">
+<div id="services" class="container-fluid text-center">
   <h2>OUR TEAM</h2>
   <h4>Our consultants are highly qualified and have worked on conventional and unconventional  reservoirs spanning the globe. They have experience working with major oil and gas companies as well as service companies and have been involved in numerous reservoir studies, field development planning, reservoir management and reservoir surveillance projects underpinning their expertise in their respective areas. Our consultants are not only highly experienced, but also experts in using modern, state-of-the-art technology and methods to design solutions and provide answers.</h4>
   <br>
   <div class="row">
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="teampics" src="RashminDandekar_2.jpg">
+      <img class="teampics" src="RashminDandekar.jpg">
     </div>
     <div class="col-sm-8">
         <h4>Rashmin Dandekar</h4>
@@ -148,6 +333,7 @@
 </footer>
 
 <script>
+/*
 $(document).ready(function(){
   // Add smooth scrolling to all links in navbar + footer link
   $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
@@ -168,7 +354,7 @@ $(document).ready(function(){
       window.location.hash = hash;
     });
   });
-  
+  */
   $(window).scroll(function() {
     $(".slideanim").each(function(){
       var pos = $(this).offset().top;
