--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="Company.html">TEAM</a></li>
+        <li><a href="company.html" target="_self">TEAM</a></li>
         <li><a href="#descriptions">SOLUTIONS</a></li>
         <li><a href="#descriptions">PROJECTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
@@ -45,10 +45,13 @@
       <div class="col-sm-4">
         <img src="AEfinal.png">
       </div>
-      <div class="col-sm-8"><h1>Aus<span style="color:#c60c0c">Experts</span> Subsurface Consulting</h1></div>
+      <div class="col-sm-8">
+        <h1>Aus<span style="color:#c60c0c">Experts</span> Subsurface Consulting</h1>
+        <h3>High Quality Subsurface Solutions</h3>
+      </div>
     </div>
     <div class="row">
-      <p>AusExperts is a subsurface consulting organization engaged in providing high quality subsurface consulting services to the upstream oil and gas industry. Our consulting services encompass the entire range of subsurface deliverables through exploration, appraisal, development and ongoing reservoir management. We provide services for geology, geophysics, petrophysics, reservoir and petroleum engineering</p>
+      
     </div>
  
 </div>
@@ -59,6 +62,7 @@
    <div class="col-sm-1"></div>
    <div class="col-sm-10">
      <h2>About AusExperts</h2>
+      <p>AusExperts is a subsurface consulting organization engaged in providing high quality subsurface consulting services to the upstream oil and gas industry. Our consulting services encompass the entire range of subsurface deliverables through exploration, appraisal, development and ongoing reservoir management. We provide services for geology, geophysics, petrophysics, reservoir and petroleum engineering</p>
       <p>In this challenging oil price environment what sets us apart from our competition is our ability to provide high quality, yet economical, subsurface consulting services. Our consultants are not only highly experienced, but also experts in using modern, state-of-the-art technology and methods to design solutions and provide answers.</p>
     <img class="img-responsive" src="FrontPage_1.png">
    </div>
@@ -76,7 +80,9 @@
         <p><strong>Our Team</strong></p>
         <p>Our consultants are highly qualified geoscientists and engineers who have worked on projects which span the globe.<br>They have been involved in numerous reservoir studies, field development planning, reservoir management and surveillance projects, underpinning their expertise in respective areas.</p>
         <div style="text-align:center">
-          <button class="btn btn-lg">Team</button>
+          <a href="company.html" target="_self">
+            <button class="btn btn-lg">Team</button>
+          </a>
         </div>
       </div>
     </div>
@@ -142,12 +148,12 @@
 <!-- Add Google Maps -->
 <script src="http://maps.googleapis.com/maps/api/js"></script>
 <script>
-var myCenter = new google.maps.LatLng(-31.895486, 115.779362);
+var myCenter = new google.maps.LatLng(-31.953383, 115.859296);
 
 function initialize() {
 var mapProp = {
 center:myCenter,
-zoom:14,
+zoom:12,
 scrollwheel:false,
 draggable:false,
 mapTypeId:google.maps.MapTypeId.ROADMAP
@@ -174,6 +180,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </footer>
 
 <script>
+/*
 $(document).ready(function(){
   // Add smooth scrolling to all links in navbar + footer link
   $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
@@ -194,7 +201,7 @@ $(document).ready(function(){
       window.location.hash = hash;
     });
   });
-  
+*/  
   $(window).scroll(function() {
     $(".slideanim").each(function(){
       var pos = $(this).offset().top;
