--- a/Company.html
+++ b/Company.html
@@ -201,6 +201,8 @@
   */
   </style>
 </head>
+
+
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
 <!-- Navigation - required in all pages? -->
@@ -216,9 +218,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html#about">ABOUT</a></li>
-        <li><a href="#descriptions">TEAM</a></li>
-        <li><a href="#descriptions">SOLUTIONS</a></li>
+        <li><a href="index.html#about" target="_self">ABOUT</a></li>
+        <li><a href="#team">TEAM</a></li>
+        <li><a href="Solutions.html" target="_self">SOLUTIONS</a></li>
         <li><a href="#descriptions">PROJECTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -228,7 +230,7 @@
 
 
 <!-- Container (Services Section) -->
-<div id="services" class="container-fluid text-center">
+<div id="team" class="container-fluid text-center">
   <h2>OUR TEAM</h2>
   <h4>Our consultants are highly qualified and have worked on conventional and unconventional  reservoirs spanning the globe. They have experience working with major oil and gas companies as well as service companies and have been involved in numerous reservoir studies, field development planning, reservoir management and reservoir surveillance projects underpinning their expertise in their respective areas. Our consultants are not only highly experienced, but also experts in using modern, state-of-the-art technology and methods to design solutions and provide answers.</h4>
   <br>
