--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="company.html" target="_self">TEAM</a></li>
-        <li><a href="#descriptions">SOLUTIONS</a></li>
+        <li><a href="Company.html" target="_self">TEAM</a></li>
+        <li><a href="Solutions.html">SOLUTIONS</a></li>
         <li><a href="#descriptions">PROJECTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -80,7 +80,7 @@
         <p><strong>Our Team</strong></p>
         <p>Our consultants are highly qualified geoscientists and engineers who have worked on projects which span the globe.<br>They have been involved in numerous reservoir studies, field development planning, reservoir management and surveillance projects, underpinning their expertise in respective areas.</p>
         <div style="text-align:center">
-          <a href="company.html" target="_self">
+          <a href="Company.html" target="_self">
             <button class="btn btn-lg">Team</button>
           </a>
         </div>
