--- a/Solutions.html
+++ b/Solutions.html
@@ -236,96 +236,127 @@
     We provide a wide range of consulting services ranging from reservoir characterization, classical reservoir engineering to advanced numerical modelling and simulation.  Our engineers have experience in reservoir engineering processes and practices from exploration through appraisal, development and reservoir management
   </h4>
   <br>
+  
+  
   <div class="row">
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img  src="ResCharAndModeling.png">
+      <img  class="solutionpics" src="ResCharAndModeling.png">
     </div>
     <div class="col-sm-8">
         <h4>Reservoir Characterisation and Modelling</h4>
         <p style="text-align:left">
           Reservoir Characterisation and Modelling is an integrated effort by the earth science and engineering disciplines to create a digital representation of the reservoir.  This digital representation, the “model”, is used for estimation of volumes and numerical simulation.  The engineering inputs into the model are based on the stage of development of the reservoir.  Engineering inputs are also important in the construction of the model, since the model may later be converted into a simulation model.
-          <br><br>
+          <br>
           Our experts can assist in the creation of a reservoir model for conducting necessary engineering analysis for input into the characterisation and modelling effort.  We can also provide all necessary inputs in terms of gridding, population of properties and fluid contact information, as well as upscaling of models if required.
         </p>
     </div>
   </div>
-  
-  <br>
-  
+
+
   <div class="row">
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="teampics" src="Ahmad.jpg">
+      <img  class="solutionpics" src="Petrophysics.jpg">
     </div>
     <div class="col-sm-8">
-        <h4>Ahmad Dehghan Khalili</h4>
+        <h4>Petrophysical Analysis</h4>
         <p style="text-align:left">
-        Ahmad has 10 years of international experience in the oil and gas industry including 7 years on carbonate reservoirs for onshore and offshore oil and gas fields in Iran where he was involved in various Field Development projects undertaking international buy-back contracts. He has experience working on conventional and unconventional reservoirs including gas storage facilities in the Surat and Cooper Basins in Australia. Ahmad has a Master’s degree in Petroleum Geoscience and Engineering from IFP-School and a PhD in Petroleum Engineering majoring in Reservoir Characterization from The University of New South Wales.
+          bla bla bla bla bla bla yada yada yada
         </p>
     </div>
   </div>
-  
-  <br>
-  
+ 
+
   <div class="row">
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="teampics" src="Wesely.jpg">
+      <img class="solutionpics"  src="FluidAndRockCharct.png">
     </div>
     <div class="col-sm-8">
-        <h4>Wesley Emery</h4>
+        <h4>Fluid & Rock Characterisation</h4>
         <p style="text-align:left">
-        Wesley has over 25 years experience in the petroleum industry in South East Asia, Australia and the UK. Wesley’s background includes Bachelor of Electronic and Petroleum Engineering and includes the initial 6 years working in the field. Experience and expertise consists of various exploration and appraisal petrophysical evaluations but also several brown field evaluations determining residual hydrocarbons, bypassed pay and updating recovery factors and HCIIP based on early production results. Wesley’s latest skill involves predicting and populating petrophysical properties into the 3D space from the Seismic trace alone calibrated to at least one discovery/exploration well which includes immediate blind predictions of existing wells or wells yet to be drilled.pertise in respective areas.
-        </p>
-    </div>
-  </div>
-  
-  <br>
-  
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="teampics" src="Jayanta.jpg">
-    </div>
-    <div class="col-sm-8">
-        <h4>Jayanta Ray</h4>
-        <p style="text-align:left">
-          Jayanta is an earth scientist having 20 years experience in the industry. He has held numerous positions during his tenure both for an operating company as well as an oil gas service provider. He has worked in various locations which transgresses geographical and cultural boundaries. He has the experience in working in the middle eastern countries where he was exposed to carbonate reservoirs. Jayanta has extensive experience in development geology with emphasis on reservoir characterization and modeling for some complex reservoirs. He has been involved with the construction of fit-for purpose geological models which under pinned some key decisions towards seeking new field development opportunities. Mr. Ray graduated with Masters in Geosciences from the University of Houston.
-        </p>
-    </div>
-  </div>
-  
-  <br>
-  
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="teampics" src="Trina_placeholder.jpg">
-    </div>
-    <div class="col-sm-8">
-        <h4>Trina Morillo</h4>
-        <p style="text-align:left">
-          Trina is a Senior Production Technologist with over 15 years of experience in the petroleum industry working in various roles in E&P for consulting and operating companies in Venezuela, Malaysia, Brunei, Thailand and Australia.  Trina has extensive well modelling and flow assurance expertise and has led numerous studies including well production enhancement campaigns and sand control management plans.  Trina has implemented well monitoring workflows for automated field surveillance systems, applied fundamental well mechanics and industry standard procedures for well design and integrity management for multiple development projects.  Trina holds a degree in Mechanical engineering from L.U.Z. University in Venezuela.
-        </p>
-    </div>
-  </div>
-  
-  <br>
-    
-    <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="teampics" src="Kanu.jpg">
-    </div>
-    <div class="col-sm-8">
-        <h4>Kanu Bhana</h4>
-        <p style="text-align:left">
-          Kanu has 18 years international experience working for national, multi-national oil and gas companies in Australia. Indonesia and Malaysia. He has extensive oil and gas experience with classical reservoir engineering methods and state of the art reservoir simulation methods including experimental design, global optimization methods and assisted history matching. He has worked on onshore and offshore oil fields in the Timor Sea, gas fields on the North West Shelf of Australia and giant gas fields in the Mahakam Delta, Indonesia. Kanu has degrees in physics, exploration geophysics and a Masters degree in Petroleum Engineering from Curtin University.
+          Fluid characterisation is important to understand the reservoir fluid properties, which are the basis of successful exploitation of an oil or gas reservoir, though mainly so in oil reservoirs.  The early and accurate estimation of fluid properties such as Saturation Pressure, Solution Gas Oil Ratio, Formation Volume Factors and Viscosity are extremely important in making an optimum field development plan to fully exploit the reservoirs. 
+          <br>
+          Rock characterisation involves the analysis of Routine and Special Core Analyses to characterise the formations from which oil and gas are produced.  Based on core analyses of rock properties such as porosity and permeability, and rock-fluid interaction properties such as relative permeability and capillary pressure, rocks are classified and correlated with well log derived properties.  These are later used for reservoir modelling and simulation
         </p>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img class="solutionpics"  src="NumSim.jpg">
+    </div>
+    <div class="col-sm-8">
+        <h4>Numerical Simulation of Primary & Secondary Recovery</h4>
+        <p style="text-align:left">
+        Numerical Simulation is a versatile tool for reservoir engineers.  Simulation is used for small scale studies like single well models, areal and cross sectional models to reservoir and full field studies.  Numerical simulation is not only used for primary depletion but also for secondary processes like water flooding and gas injection as well as Enhanced Oil Recovery processes like miscible flood, WAG and steam flood.  A more recent technique, streamline simulation, offers the flexibility of modelling entire reservoirs with a rapid turn-around time.
+        <br>
+        Our experts are widely experienced in simulation, both finite difference and streamline simulation.  We are extremely proficient in industry standard tool like ECLIPSE.  We have conducted numerous simulation studies ranging from single well models, areal and cross sectional models as well as full field simulation studies.  We have conducted several waterflooding and gas injection studies and are capable of conducting EOR simulation studies also.
+
+        </p>
+    </div>
+  </div> 
+
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img class="solutionpics"  src="PTA.jpg">
+    </div>
+    <div class="col-sm-8">
+        <h4>Pressure Transient Analysis</h4>
+        <p style="text-align:left">
+          Pressure Transient testing, also commonly known as “Well Testing”, is used mainly for determining the formation flow capacity (kh, the permeability thickness product) and the skin factor.  Other parameters which can be inferred from PTT are distance to boundaries (faults), and if the test is run long enough, the reservoir volume contacted by the well.  PTT is used in exploration and appraisal wells to determine the flow capacity and number of wells required for development.  It is also used in development wells to determine the skin effect and any requirement for stimulation of the well. During the exploration phase, well testing also provides an avenue for obtaining a reservoir fluid sample at the initial reservoir conditions.
+          <br>
+          Our services include designing the well test to meet the objectives of the test, specifying well test equipment and gauges, sampling procedures and providing a comprehensive pressure transient analysis to extract maximum information from the well test.
+        </p>
+    </div>
+  </div> 
+
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img class="solutionpics"  src="MBA.png">
+    </div>
+    <div class="col-sm-8">
+        <h4>Material Balance Analysis</h4>
+        <p style="text-align:left">
+          The Material Balance method is used in oil and gas production to ascertain the drive mechanism and estimate the oil and gas volume connected to the wells.  Though primarily used as a post-production analysis, Material Balance studies can also be used to estimate reserves and draw up production profiles for oil and gas.  Material Balance Analysis can be used to estimates the optimum number of wells for depleting an oil and gas reservoir.
+          <br>
+          Though numerous industry standard software tools are available, MBAL, by Petroleum Experts is considered the most versatile and flexible tool for Reservoir Engineering studies.  Our experts are well versed with most industry software.  We have also developed an in-house Material Balance tool using Microsoft Excel along with powerful VBA routines for conducting Material Balance studies.
+        </p>
+    </div>
+  </div> 
+
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img class="solutionpics"  src="ProdForeAndReserves.jpg">
+    </div>
+    <div class="col-sm-8">
+        <h4>Production Forecasting & Reserves Estimation</h4>
+        <p style="text-align:left">
+          Production Forecasting is one of the main responsibilities of a Reservoir Engineer.  It involves predicting the future production of oil and gas streams at various stages of the reservoir lifecycle.  Depending on the characteristics of the reservoir and stage of development, different methods can be used to predict the volumes of oil and gas obtainable from the reservoir.  These volumes form the basis of an oil company’s reserves. 
+          <br>
+          We can forecast a production profile of oil and gas streams while giving due consideration to the reservoir characteristics and stage of the reservoir lifecycle, for assessment of reserves. An in-house tool to conduct Monte Carlo simulation can be additionally used to conduct an uncertainty and risk assessment of the profiles.
+        </p>
+    </div>
+  </div> 
+
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img class="solutionpics"  src="UnRA.png">
+    </div>
+    <div class="col-sm-8">
+        <h4>Uncertainty Quantification & Risk Analysis</h4>
+        <p style="text-align:left">
+        Uncertainty and Risk Analysis as a part of reservoir engineering studies has gained prominence in the last decade and is fast becoming part of reservoir engineering deliverables for most of the major oil companies in the world.  This trend is a result of the advancement of tools and techniques to handle uncertainty analysis in reservoir engineering.  It is also due to the availability of inexpensive computer hardware to conduct the multitude of calculations required to accomplish these type of analyses.
+        <br>
+        Our experts are highly experienced in Uncertainty and Risk Analysis for Reservoir Engineering.  They have carried out major projects for an oil company using the latest techniques available for the tasks.  We are experienced in using Monte Carlo simulation as well as experimental design for conducting sensitivity studies, uncertainty analysis and risk analysis.        </p>
+    </div>
+  </div>   
 
 </div>
 
