changes made today

--- a/Solutions.html
+++ b/Solutions.html
@@ -220,9 +220,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html#about" target="_self">ABOUT</a></li>
         <li><a href="Company.html"  target="_self">TEAM</a></li>
-        <li><a href="#solutions">SOLUTIONS</a></li>
-        <li><a href="#descriptions">PROJECTS</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="Solutions.html">SOLUTIONS</a></li>
+        <li><a href="index.html">PROJECTS</a></li>
+        <li><a href="index.html#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
