--- a/Company.html
+++ b/Company.html
@@ -221,8 +221,8 @@
         <li><a href="index.html#about" target="_self">ABOUT</a></li>
         <li><a href="#team">TEAM</a></li>
         <li><a href="Solutions.html" target="_self">SOLUTIONS</a></li>
-        <li><a href="#descriptions">PROJECTS</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="index.html">PROJECTS</a></li>
+        <li><a href="index.html#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
