--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you shortly.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span>Perth, Australia</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +614 292 296 96</p>
+      <!-- <p><span class="glyphicon glyphicon-phone"></span> +614 292 296 96</p> -->
       <p><span class="glyphicon glyphicon-envelope"></span>contact@ausexperts.com</p> 
     </div>
     <div class="col-sm-7">
