updated PP writeup

--- a/Company.html
+++ b/Company.html
@@ -237,7 +237,7 @@
   <div class="row">
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="teampics" src="RashminDandekar.jpg">
+      <img class="teampics" src="RashminDandekar_3.jpg">
     </div>
     <div class="col-sm-8">
         <h4>Rashmin Dandekar</h4>
