--- a/Solutions.html
+++ b/Solutions.html
@@ -262,7 +262,9 @@
     <div class="col-sm-8">
         <h4>Petrophysical Analysis</h4>
         <p style="text-align:left">
-          bla bla bla bla bla bla yada yada yada
+          Petrophysical analysis is critical to the subsurface evaluation process. Each well log interpretation is calibrated to the core laboratory measurements of porosity, permeability, saturation, mineral/clay analysis and fluid samples among others to ensure its accuracy. The petrophysical properties are then up scaled into the static and reservoir models for determining HCIIP, productivity and recovery factors to enable alignment with production results.Petrophysical analysis should be able to offer several petrophysical models to ascertain model suitability, uncertainty analysis and property prediction models that can be universally applied into the 3D static space. These models can include thin bed analysis, reservoir quality analysis, saturation height modelling (imbibition and drainage), permeability modelling (including relperms), facies predictions (depositional and reservoir quality) and standard clastic and carbonate petrophysical model analysis.
+          <br>
+          Ausexperts are proficient with all the interpretation modules available in Geolog, Techlog and Petrolog Petrophysical software. Customised interpretation code can also be generated to suit the conditions specific to the subsurface project being studied.
         </p>
     </div>
   </div>
