--- a/Projects.html
+++ b/Projects.html
@@ -220,8 +220,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html#about" target="_self">ABOUT</a></li>
         <li><a href="Company.html"  target="_self">TEAM</a></li>
-        <li><a href="#solutions">SOLUTIONS</a></li>
-        <li><a href="index.html">PROJECTS</a></li>
+        <li><a href="Solutions.html">SOLUTIONS</a></li>
+        <li><a href="#projects">PROJECTS</a></li>
         <li><a href="index.html#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -230,7 +230,7 @@
 
 
 <!-- Container (Services Section) -->
-<div id="solutions" class="container-fluid text-center">
+<div id="projects" class="container-fluid text-center">
   <h2>OUR SOLUTIONS</h2>
   <h4>
     We provide a wide range of consulting services ranging from reservoir characterization, classical reservoir engineering to advanced numerical modelling and simulation.  Our engineers have experience in reservoir engineering processes and practices from exploration through appraisal, development and reservoir management
@@ -257,12 +257,12 @@
   <div class="row">
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img  class="solutionpics" src="Petrophysics.jpg">
+      <img class="projectpics" src="PetPhys.svg">
     </div>
     <div class="col-sm-8">
-        <h4>Formation Evalujation</h4>
+        <h4>Petrophysical Analysis</h4>
         <p style="text-align:left">
-          Formation Evaluation is critical to the subsurface evaluation process. Each well log interpretation is calibrated to the core laboratory measurements of porosity, permeability, saturation, mineral/clay analysis and fluid samples among others to ensure its accuracy. The petrophysical properties are then up scaled into the static and reservoir models for determining in-place hydrocarbos, productivity and recovery factors to enable alignment with production results. Formation evaluation should be able to offer several petrophysical models to ascertain model suitability, uncertainty analysis and property prediction models that can be universally applied into the 3D static space. These models can include thin bed analysis, reservoir quality analysis, saturation height modelling (imbibition and drainage), permeability modelling (including relperms), facies predictions (depositional and reservoir quality) and standard clastic and carbonate petrophysical model analysis.
+          Petrophysical analysis is critical to the subsurface evaluation process. Each well log interpretation is calibrated to the core laboratory measurements of porosity, permeability, saturation, mineral/clay analysis and fluid samples among others to ensure its accuracy. The petrophysical properties are then up scaled into the static and reservoir models for determining HCIIP, productivity and recovery factors to enable alignment with production results.Petrophysical analysis should be able to offer several petrophysical models to ascertain model suitability, uncertainty analysis and property prediction models that can be universally applied into the 3D static space. These models can include thin bed analysis, reservoir quality analysis, saturation height modelling (imbibition and drainage), permeability modelling (including relperms), facies predictions (depositional and reservoir quality) and standard clastic and carbonate petrophysical model analysis.
           <br>
           Ausexperts are proficient with all the interpretation modules available in Geolog, Techlog and Petrolog Petrophysical software. Customised interpretation code can also be generated to suit the conditions specific to the subsurface project being studied.
         </p>
