--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="#about">ABOUT</a></li>
         <li><a href="Company.html" target="_self">TEAM</a></li>
         <li><a href="Solutions.html">SOLUTIONS</a></li>
-        <li><a href="#descriptions">PROJECTS</a></li>
+        <li><a href="Projects.html">PROJECTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
