added more graphics

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-  <link rel="shortcut icon" href="AEfinal.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="AEFinal.png" type="image/x-icon" />
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
@@ -43,7 +43,7 @@
   <div id="top" class="jumbotron text-center">
     <div class="row">
       <div class="col-sm-4">
-        <img src="AEfinal.png">
+        <img src="AEfinal_1.png">
       </div>
       <div class="col-sm-8">
         <h1>Aus<span style="color:#c60c0c">Experts</span> Subsurface Consulting</h1>
