--- a/Solutions.html
+++ b/Solutions.html
@@ -221,7 +221,7 @@
         <li><a href="index.html#about" target="_self">ABOUT</a></li>
         <li><a href="Company.html"  target="_self">TEAM</a></li>
         <li><a href="#solutions">SOLUTIONS</a></li>
-        <li><a href="index.html">PROJECTS</a></li>
+        <li><a href="Projects.html">PROJECTS</a></li>
         <li><a href="index.html#contact">CONTACT</a></li>
       </ul>
     </div>
