--- a/Projects.html
+++ b/Projects.html
@@ -229,139 +229,46 @@
 </nav>
 
 
-<!-- Container (Services Section) -->
-<div id="projects" class="container-fluid text-center">
-  <h2>OUR SOLUTIONS</h2>
+<div id="portfolio" class="container-fluid text-center bg-grey">
+
+  <h2>What our customers say</h2>
   <h4>
-    We provide a wide range of consulting services ranging from reservoir characterization, classical reservoir engineering to advanced numerical modelling and simulation.  Our engineers have experience in reservoir engineering processes and practices from exploration through appraisal, development and reservoir management
+    Our team of consultants have worked individually in numerous Field Development Planning (FDP) projects.  FDPis a multi-disciplinary activity involving the expertise of geoscientists, engineers, and commercial and allied disciplines. Our consultants have individually contributed to all phases of FDP.  With the wealth of experience of our consultants, we are confident of executing the entire scope of the assignment and achieving a high quality outcome.
+    <br>
+    Brief descriptions of the various projects participated in and executed by our consultants is given below
   </h4>
-  <br>
-  
-  
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img  class="solutionpics" src="ResCharAndModeling.png">
+  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <h4>"This company is the best. I am so happy with the result!"<br><span style="font-style:normal;">Michael Roe, Vice President, Comment Box</span></h4>
+      </div>
+      <div class="item">
+        <h4>"One word... WOW!!"<br><span style="font-style:normal;">John Doe, Salesman, Rep Inc</span></h4>
+      </div>
+      <div class="item">
+        <h4>"Could I... BE any more happy with this company?"<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
+      </div>
     </div>
-    <div class="col-sm-8">
-        <h4>Reservoir Characterisation and Modelling</h4>
-        <p style="text-align:left">
-          Reservoir Characterisation and Modelling is an integrated effort by the earth science and engineering disciplines to create a digital representation of the reservoir.  This digital representation, the “model”, is used for estimation of volumes and numerical simulation.  The engineering inputs into the model are based on the stage of development of the reservoir.  Engineering inputs are also important in the construction of the model, since the model may later be converted into a simulation model.
-          <br>
-          Our experts can assist in the creation of a reservoir model for conducting necessary engineering analysis for input into the characterisation and modelling effort.  We can also provide all necessary inputs in terms of gridding, population of properties and fluid contact information, as well as upscaling of models if required.
-        </p>
-    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-
-
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="projectpics" src="PetPhys.svg">
-    </div>
-    <div class="col-sm-8">
-        <h4>Petrophysical Analysis</h4>
-        <p style="text-align:left">
-          Petrophysical analysis is critical to the subsurface evaluation process. Each well log interpretation is calibrated to the core laboratory measurements of porosity, permeability, saturation, mineral/clay analysis and fluid samples among others to ensure its accuracy. The petrophysical properties are then up scaled into the static and reservoir models for determining HCIIP, productivity and recovery factors to enable alignment with production results.Petrophysical analysis should be able to offer several petrophysical models to ascertain model suitability, uncertainty analysis and property prediction models that can be universally applied into the 3D static space. These models can include thin bed analysis, reservoir quality analysis, saturation height modelling (imbibition and drainage), permeability modelling (including relperms), facies predictions (depositional and reservoir quality) and standard clastic and carbonate petrophysical model analysis.
-          <br>
-          Ausexperts are proficient with all the interpretation modules available in Geolog, Techlog and Petrolog Petrophysical software. Customised interpretation code can also be generated to suit the conditions specific to the subsurface project being studied.
-        </p>
-    </div>
-  </div>
- 
-
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="solutionpics"  src="FluidAndRockCharct.png">
-    </div>
-    <div class="col-sm-8">
-        <h4>Fluid & Rock Characterisation</h4>
-        <p style="text-align:left">
-          Fluid characterisation is important to understand the reservoir fluid properties, which are the basis of successful exploitation of an oil or gas reservoir, though mainly so in oil reservoirs.  The early and accurate estimation of fluid properties such as Saturation Pressure, Solution Gas Oil Ratio, Formation Volume Factors and Viscosity are extremely important in making an optimum field development plan to fully exploit the reservoirs. 
-          <br>
-          Rock characterisation involves the analysis of Routine and Special Core Analyses to characterise the formations from which oil and gas are produced.  Based on core analyses of rock properties such as porosity and permeability, and rock-fluid interaction properties such as relative permeability and capillary pressure, rocks are classified and correlated with well log derived properties.  These are later used for reservoir modelling and simulation
-        </p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="solutionpics"  src="NumSim.jpg">
-    </div>
-    <div class="col-sm-8">
-        <h4>Numerical Simulation of Primary & Secondary Recovery</h4>
-        <p style="text-align:left">
-        Numerical Simulation is a versatile tool for reservoir engineers.  Simulation is used for small scale studies like single well models, areal and cross sectional models to reservoir and full field studies.  Numerical simulation is not only used for primary depletion but also for secondary processes like water flooding and gas injection as well as Enhanced Oil Recovery processes like miscible flood, WAG and steam flood.  A more recent technique, streamline simulation, offers the flexibility of modelling entire reservoirs with a rapid turn-around time.
-        <br>
-        Our experts are widely experienced in simulation, both finite difference and streamline simulation.  We are extremely proficient in industry standard tool like ECLIPSE.  We have conducted numerous simulation studies ranging from single well models, areal and cross sectional models as well as full field simulation studies.  We have conducted several waterflooding and gas injection studies and are capable of conducting EOR simulation studies also.
-
-        </p>
-    </div>
-  </div> 
-
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="solutionpics"  src="PTA.jpg">
-    </div>
-    <div class="col-sm-8">
-        <h4>Pressure Transient Analysis</h4>
-        <p style="text-align:left">
-          Pressure Transient testing, also commonly known as “Well Testing”, is used mainly for determining the formation flow capacity (kh, the permeability thickness product) and the skin factor.  Other parameters which can be inferred from PTT are distance to boundaries (faults), and if the test is run long enough, the reservoir volume contacted by the well.  PTT is used in exploration and appraisal wells to determine the flow capacity and number of wells required for development.  It is also used in development wells to determine the skin effect and any requirement for stimulation of the well. During the exploration phase, well testing also provides an avenue for obtaining a reservoir fluid sample at the initial reservoir conditions.
-          <br>
-          Our services include designing the well test to meet the objectives of the test, specifying well test equipment and gauges, sampling procedures and providing a comprehensive pressure transient analysis to extract maximum information from the well test.
-        </p>
-    </div>
-  </div> 
-
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="solutionpics"  src="MBA.png">
-    </div>
-    <div class="col-sm-8">
-        <h4>Material Balance Analysis</h4>
-        <p style="text-align:left">
-          The Material Balance method is used in oil and gas production to ascertain the drive mechanism and estimate the oil and gas volume connected to the wells.  Though primarily used as a post-production analysis, Material Balance studies can also be used to estimate reserves and draw up production profiles for oil and gas.  Material Balance Analysis can be used to estimates the optimum number of wells for depleting an oil and gas reservoir.
-          <br>
-          Though numerous industry standard software tools are available, MBAL, by Petroleum Experts is considered the most versatile and flexible tool for Reservoir Engineering studies.  Our experts are well versed with most industry software.  We have also developed an in-house Material Balance tool using Microsoft Excel along with powerful VBA routines for conducting Material Balance studies.
-        </p>
-    </div>
-  </div> 
-
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="solutionpics"  src="ProdForeAndReserves.jpg">
-    </div>
-    <div class="col-sm-8">
-        <h4>Production Forecasting & Reserves Estimation</h4>
-        <p style="text-align:left">
-          Production Forecasting is one of the main responsibilities of a Reservoir Engineer.  It involves predicting the future production of oil and gas streams at various stages of the reservoir lifecycle.  Depending on the characteristics of the reservoir and stage of development, different methods can be used to predict the volumes of oil and gas obtainable from the reservoir.  These volumes form the basis of an oil company’s reserves. 
-          <br>
-          We can forecast a production profile of oil and gas streams while giving due consideration to the reservoir characteristics and stage of the reservoir lifecycle, for assessment of reserves. An in-house tool to conduct Monte Carlo simulation can be additionally used to conduct an uncertainty and risk assessment of the profiles.
-        </p>
-    </div>
-  </div> 
-
-  <div class="row">
-    <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
-      <img class="solutionpics"  src="UnRA.png">
-    </div>
-    <div class="col-sm-8">
-        <h4>Uncertainty Quantification & Risk Analysis</h4>
-        <p style="text-align:left">
-        Uncertainty and Risk Analysis as a part of reservoir engineering studies has gained prominence in the last decade and is fast becoming part of reservoir engineering deliverables for most of the major oil companies in the world.  This trend is a result of the advancement of tools and techniques to handle uncertainty analysis in reservoir engineering.  It is also due to the availability of inexpensive computer hardware to conduct the multitude of calculations required to accomplish these type of analyses.
-        <br>
-        Our experts are highly experienced in Uncertainty and Risk Analysis for Reservoir Engineering.  They have carried out major projects for an oil company using the latest techniques available for the tasks.  We are experienced in using Monte Carlo simulation as well as experimental design for conducting sensitivity studies, uncertainty analysis and risk analysis.        </p>
-    </div>
-  </div>   
-
 </div>
-
 
 
 <footer class="container-fluid text-center">
