--- a/Projects.html
+++ b/Projects.html
@@ -221,7 +221,7 @@
         <li><a href="index.html#about" target="_self">ABOUT</a></li>
         <li><a href="Company.html"  target="_self">TEAM</a></li>
         <li><a href="Solutions.html">SOLUTIONS</a></li>
-        <li><a href="Projects.html">PROJECTS</a></li>
+        <li><a href="#projects">PROJECTS</a></li>
         <li><a href="index.html#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -229,46 +229,63 @@
 </nav>
 
 
-<div id="portfolio" class="container-fluid text-center bg-grey">
-
-  <h2>What our customers say</h2>
+<!-- Container (Services Section) -->
+<div id="projects" class="container-fluid text-center">
+  <h2>OUR PROJECTS</h2>
   <h4>
-    Our team of consultants have worked individually in numerous Field Development Planning (FDP) projects.  FDPis a multi-disciplinary activity involving the expertise of geoscientists, engineers, and commercial and allied disciplines. Our consultants have individually contributed to all phases of FDP.  With the wealth of experience of our consultants, we are confident of executing the entire scope of the assignment and achieving a high quality outcome.
-    <br>
-    Brief descriptions of the various projects participated in and executed by our consultants is given below
+    Our team of consultants have worked individually in numerous Field Development Planning (FDP) projects.  FDP is a multi-disciplinary activity involving the expertise of geoscientists, engineers, and commercial and allied disciplines. Our consultants have individually contributed to all phases of FDP.  With the wealth of experience of our consultants, we are confident of executing the entire scope of the assignment and achieving a high quality outcome.
   </h4>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <h4>"This company is the best. I am so happy with the result!"<br><span style="font-style:normal;">Michael Roe, Vice President, Comment Box</span></h4>
-      </div>
-      <div class="item">
-        <h4>"One word... WOW!!"<br><span style="font-style:normal;">John Doe, Salesman, Rep Inc</span></h4>
-      </div>
-      <div class="item">
-        <h4>"Could I... BE any more happy with this company?"<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
-      </div>
+  <br>
+  
+  
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img  class="projectpics" src="Res.svg">
     </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="col-sm-8">
+        <h4>Infill Drilling Project, Cooper Basin, Australia</h4>
+        <p style="text-align:left">
+          The field comprising of 30 wells were planned for further field development and 15 additional infill wells. A comprehensive field development plan study was performed in a multidisciplinary group involving geophysics, geology, petrophysics, reservoir engineering, and production engineering. Several field development scenarios were formulated with respect to economical and commercial aspect of the field within the prevailing environmental and governmental framework.
+          <br>
+          Static and dynamic model was built for a dead oil reservoir with 20 meter of sandstone formation.  Four years of production history was used to calibrate an upscaled static model.  Performance prediction was made using this calibrated model to evaluate project economics for various scenarios.
+        </p>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img  class="projectpics" src="Res.svg">
+    </div>
+    <div class="col-sm-8">
+        <h4>Field Development Planning of giant gas reservoirs, Mahakam Delta, Indonesia</h4>
+        <p style="text-align:left">
+          The Sanga Sanga PSC comprises a series of large onshore gas fields with associated oil and condensate. The key producing fields are Nilam and Badak, which are unitised with the neighbouring Total-operated Offshore Mahakam PSC. From 2005, the Sanga Sanga PSC has struggled to maintain output, with production falling short of its contractual volumes to the LNG plant.
+          <br>
+          The reservoirs are complex and beyond seismic resolution with communication between tanks through common aquifers, sand on sand juxtaposition and poor cement completions. The scope of work involved rebuilding the entire suite of Nilam and Badak material balance reservoir models (2000+) and history matching reservoir pressure and production data for determining the initial gas in place and remaining reserves.
+        </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img  class="projectpics" src="Res.svg">
+    </div>
+    <div class="col-sm-8">
+        <h4>Brownfield Redevelopment Project, Iran</h4>
+        <p style="text-align:left">
+          Project involved optimizing oil recovery of a brownfield oil and gas field with more than 20 years of production. The geologically complex field comprised of several compartments of interconnected reservoirs. A comprehensive review of the field static and dynamic data was performed to formulate optimum redevelopment using artificial lift techniques. Due to aggressive early production, majority of the wells were experiencing coning issue, however gas cap and aquifer provided adequate pressure support. As a result of the project, multiple redevelopment strategies were identified, and surveillance and reservoir management plans formulated.
+          <br>
+          During project execution, field redevelopment was done using gas lift. As a result of reservoir management, later stages of field depleted employed ESP and sucker rod pump.
+        </p>
+    </div>
+  </div>
+
+
 </div>
+
 
 
 <footer class="container-fluid text-center">
