After Toms correction

--- a/Projects.html
+++ b/Projects.html
@@ -271,6 +271,20 @@
   <div class="row">
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img  class="projectpics" src="ProdTech.svg">
+    </div>
+    <div class="col-sm-8">
+        <h4>FDP(Phase 3) of Bunga Orkid and Pakma fields, Malaysia</h4>
+        <p style="text-align:left">
+          The Bunga Orkid and Pakma fields are Oil and Dry gas field respectively offshore Malaysia and Vietnam (at the time operated by Talisman). The infrastructure consists of 16 development wells, three wellhead riser platforms, a central processing platform, an FSO and more than 100km of subsea pipelines.  Production expectation was 40,000-50,000bopd and 270mmscfd of gas.  Project involved FEED phase and detail engineering for oil and gas wells, tubing size selection, material and connection specification for deviated wells and completion design. 
+        </p>
+    </div>
+  </div>
+  
+  <div class="showhide">
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
       <img  class="projectpics" src="Res.svg">
     </div>
     <div class="col-sm-8">
@@ -281,6 +295,8 @@
           During project execution, field redevelopment was done using gas lift. As a result of reservoir management, later stages of field depleted employed ESP and sucker rod pump.
         </p>
     </div>
+  </div>
+    
   </div>
 
 
