--- a/Solutions.html
+++ b/Solutions.html
@@ -260,7 +260,7 @@
       <img  class="solutionpics" src="Petrophysics.jpg">
     </div>
     <div class="col-sm-8">
-        <h4>Formation Evalujation</h4>
+        <h4>Formation Evaluation</h4>
         <p style="text-align:left">
           Formation Evaluation is critical to the subsurface evaluation process. Each well log interpretation is calibrated to the core laboratory measurements of porosity, permeability, saturation, mineral/clay analysis and fluid samples among others to ensure its accuracy. The petrophysical properties are then up scaled into the static and reservoir models for determining in-place hydrocarbos, productivity and recovery factors to enable alignment with production results. Formation evaluation should be able to offer several petrophysical models to ascertain model suitability, uncertainty analysis and property prediction models that can be universally applied into the 3D static space. These models can include thin bed analysis, reservoir quality analysis, saturation height modelling (imbibition and drainage), permeability modelling (including relperms), facies predictions (depositional and reservoir quality) and standard clastic and carbonate petrophysical model analysis.
           <br>
