show hide works

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img src="OurTeam.jpg" alt="Team">
         <p><strong>Our Team</strong></p>
         <p>Our consultants are highly qualified geoscientists and engineers who have worked on projects which span the globe.<br>They have been involved in numerous reservoir studies, field development planning, reservoir management and surveillance projects, underpinning their expertise in respective areas.</p>
-        <div style="text-align:center">
+        <div style="position:absolute; bottom:10px; right:10px">
           <a href="Company.html" target="_self">
             <button class="btn btn-lg">Team</button>
           </a>
@@ -91,7 +91,7 @@
         <img src="OurSolutions.jpg" alt="Solutions">
         <p><strong>Our Solutions</strong></p>
         <p>Our consulting services encompass the entire range of subsurface deliverables, through exploration, appraisal, development and ongoing reservoir management.<br>We provide services for geophysics, petrophysics, geology, geophysics, reservoir engineering and petroleum engineering.</p>
-        <div style="text-align:center">
+        <div style="position:absolute; bottom:10px; right:10px">
           <a href="Solutions.html" target="_self">
             <button class="btn btn-lg">Solutions</button>
           </a>
@@ -102,9 +102,9 @@
       <div class="thumbnail">
         <img src="OurProjects.jpg" alt="Projects">
         <p><strong>Projects</strong></p>
-        <p>Our consultants have participated in the execution of a range of projects in their individual specialized areas as part of multidisciplinary teams for Field Development Planning or reservoir studoes</p>
-        <div style="text-align:center">
-          <a href="Project.html" target="_self">
+        <p>Our consultants have participated in the execution of a range of projects in their individual specialized areas as part of multidisciplinary teams for Field Development Planning or reservoir studies</p>
+        <div style="position:absolute; bottom:10px; right:10px">
+          <a href="Projects.html" target="_self">
             <button class="btn btn-lg">Projects</button>
           </a>
         </div>
