--- a/Projects.html
+++ b/Projects.html
@@ -13,193 +13,7 @@
   
   <link rel="shortcut icon" href="AEfinal.png" type="image/x-icon" />
   <link rel="stylesheet" href="style1.css">
-  <style>
-  /*
-    body {
-      font: 400 15px Lato, sans-serif;
-      line-height: 1.8;
-      color: #818181;
-  }
-  h2 {
-      font-size: 24px;
-      text-transform: uppercase;
-      color: #303030;
-      font-weight: 600;
-      margin-bottom: 30px;
-  }
-  h4 {
-      font-size: 19px;
-      line-height: 1.375em;
-      color: #303030;
-      font-weight: 400;
-      margin-bottom: 10px;
-  }  
-  .jumbotron {
-      background-color: #000f70;
-      color: #fff;
-      padding: 100px 25px;
-      font-family: Montserrat, sans-serif;
-  }
-  .container-fluid {
-      padding: 60px 50px;
-  }
-  .bg-grey {
-      background-color: #f6f6f6;
-  }
-  .logo-small {
-      color: #000f70;
-      font-size: 50px;
-  }
-  .logo {
-      color: #000f70;
-      font-size: 200px;
-  }
-  .thumbnail {
-      padding: 0 0 15px 0;
-      border: none;
-      border-radius: 0;
-  }
-  .thumbnail img {
-      width: 100%;
-      height: 100%;
-      margin-bottom: 10px;
-  }
-  .carousel-control.right, .carousel-control.left {
-      background-image: none;
-      color: #000f70;
-  }
-  .carousel-indicators li {
-      border-color: #000f70;
-  }
-  .carousel-indicators li.active {
-      background-color: #000f70;
-  }
-  .item h4 {
-      font-size: 19px;
-      line-height: 1.375em;
-      font-weight: 400;
-      font-style: italic;
-      margin: 70px 0;
-  }
-  .item span {
-      font-style: normal;
-  }
-  .panel {
-      border: 1px solid #000f70; 
-      border-radius:0 !important;
-      transition: box-shadow 0.5s;
-  }
-  .panel:hover {
-      box-shadow: 5px 0px 40px rgba(0,0,0, .2);
-  }
-  .panel-footer .btn:hover {
-      border: 1px solid #000f70;
-      background-color: #fff !important;
-      color: ##000f70;
-  }
-  .panel-heading {
-      color: #fff !important;
-      background-color: #000f70 !important;
-      padding: 25px;
-      border-bottom: 1px solid transparent;
-      border-top-left-radius: 0px;
-      border-top-right-radius: 0px;
-      border-bottom-left-radius: 0px;
-      border-bottom-right-radius: 0px;
-  }
-  .panel-footer {
-      background-color: white !important;
-  }
-  .panel-footer h3 {
-      font-size: 32px;
-  }
-  .panel-footer h4 {
-      color: #aaa;
-      font-size: 14px;
-  }
-  .panel-footer .btn {
-      margin: 15px 0;
-      background-color: #000f70;
-      color: #fff;
-  }
-  .navbar {
-      margin-bottom: 0;
-      background-color: #000f70;
-      z-index: 9999;
-      border: 0;
-      font-size: 12px !important;
-      line-height: 1.42857143 !important;
-      letter-spacing: 4px;
-      border-radius: 0;
-      font-family: Montserrat, sans-serif;
-  }
-  .navbar li a, .navbar .navbar-brand {
-      color: #fff !important;
-  }
-  .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #000f70 !important;
-      background-color: #fff !important;
-  }
-  .navbar-default .navbar-toggle {
-      border-color: transparent;
-      color: #fff !important;
-  }
-  footer .glyphicon {
-      font-size: 20px;
-      margin-bottom: 20px;
-      color: #000f70;
-  }
-  .slideanim {visibility:hidden;}
-  .slide {
-      animation-name: slide;
-      -webkit-animation-name: slide;	
-      animation-duration: 1s;	
-      -webkit-animation-duration: 1s;
-      visibility: visible;			
-  }
-  @keyframes slide {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(70%);
-    } 
-    100% {
-      opacity: 1;
-      -webkit-transform: translateY(0%);
-    }	
-  }
-  @-webkit-keyframes slide {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(70%);
-    } 
-    100% {
-      opacity: 1;
-      -webkit-transform: translateY(0%);
-    }
-  }
-  @media screen and (max-width: 768px) {
-    .col-sm-4 {
-      text-align: center;
-      margin: 25px 0;
-    }
-    .btn-lg {
-        width: 100%;
-        margin-bottom: 35px;
-    }
-  }
-  @media screen and (max-width: 480px) {
-    .logo {
-        font-size: 150px;
-    }
-  }
-  
-  .teampics {
-    max-width:100%;
-    max-height:250px;
-    border:;
-  }
-  */
-  </style>
+
 </head>
 
 
@@ -281,8 +95,21 @@
     </div>
   </div>
   
-  <div class="showhide">
   <div class="row">
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img  class="projectpics" src="PetPhys.svg">
+    </div>
+    <div class="col-sm-8">
+        <h4>Petrophysical Evaluation of Shwe, Shwe-Phyu and Mya Turbidite gas field wells, Myanmar</h4>
+        <p style="text-align:left">
+            Evaluation of 20 wells incorporating logging program, core design/acquisition for overburden porosity, permeability, XRD clay and Dean Stark saturation. Reservoir modeling and up scaling by implementation of petrophysical facies calibrated to core litho facies and applied to Saturation Height Function (from capillary pressure) and facies based permeability. Reserves certification process incorporating reservoir fluid levels and P10, P50, P90 reserves uncertainty determination in agreement with modeled parameters of Saturation Height Function and permeability.
+        </p>
+      </div>
+    </div>
+
+  
+  <div id="canshowhide" class="row" style="display:none">
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
       <img  class="projectpics" src="Res.svg">
@@ -296,9 +123,10 @@
         </p>
     </div>
   </div>
-    
-  </div>
-
+ 
+<span>
+  <button id="showhidebtn" onclick="showhide()">Show More</button>
+</span>
 
 </div>
 
@@ -345,6 +173,23 @@ $(document).ready(function(){
     });
   });
 })
+</script>
+
+<script>
+ function showhide()
+ {
+   var div = document.getElementById("canshowhide");
+   var btn = document.getElementById("showhidebtn");
+    if (div.style.display !== "none") {
+      div.style.display = "none";
+      btn.innerHTML="Show More";
+    }
+    else {
+    div.style.display = "block";
+    btn.innerHTML="Show Less";
+  }
+
+ }
 </script>
 
 </body>
