--- a/Projects.html
+++ b/Projects.html
@@ -107,9 +107,11 @@
         </p>
       </div>
     </div>
+</div>
 
-  
-  <div id="canshowhide" class="row" style="display:none">
+<div id="canshowhide" class="container-fluid text-center" style="display:none">
+
+  <div class="row" >
     <div class="col-sm-4">
       <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
       <img  class="projectpics" src="Res.svg">
@@ -123,20 +125,47 @@
         </p>
     </div>
   </div>
- 
-<span>
-  <button id="showhidebtn" onclick="showhide()">Show More</button>
-</span>
 
+  <div class="row" >
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img  class="projectpics" src="Res.svg">
+    </div>
+    <div class="col-sm-8">
+        <h4>Lower Burgan Development Drilling, Kuwait</h4>
+        <p style="text-align:left">
+          The wells in the onshore supergiant Burgan oil field, in southeastern Kuwait, had reduced productivity due to age and falling reservoir pressure.  To sustain oil production and optimize recovery, the Kuwait Oil Company (KOC) instituted a project to model the thinner Lower Burgan sands for development.  The sands, deposited in a clastic coastal environment, were considered ideal for development via horizontal wells.  The model needed to be fine scaled to enable optimum placement of the horizontal section, using the available geological and geophysical data.
+          <br>
+          Successful integration of LWD, geological, geophysical and engineering data led to successful placement of the lateral sections within the targeted sands to maximize oil production.
+        </p>
+    </div>
+  </div>
+  
+  <div class="row" >
+    <div class="col-sm-4">
+      <!-- <span class="glyphicon glyphicon-off logo-small"></span> -->
+      <img  class="projectpics" src="Res.svg">
+    </div>
+    <div class="col-sm-8">
+        <h4>FDP using stochastic workflows for Chevron, Nigeria</h4>
+        <p style="text-align:left">
+          Project involved creating static models of reservoirs incorporating all uncertainties, upscaling to simulation models with all static uncertainties, determination and estimation of dynamic uncertainties, using experimental design and response surface methodology to create proxy models of responses, and using proxy models for stochastic history matching and stochastic field development planning.  The project needed devising and executing novel workflows for conducting the study, making extensive use of Petrel, COUGAR and Eclipse. A “live” FDP spreadsheet was constructed, which allows the client to run various development options for risk analysis.  </p>
+    </div>
+  </div>
+ 
 </div>
 
+
+<div style="text-align:center">
+  <button id="showhidebtn" onclick="showhide()">Show More</button>
+</div>
 
 
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Bootstrap Theme Made By <a href="http://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>		
+  <p style="font-size:12px">Bootstrap Theme Made By <a href="http://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>		
 </footer>
 
 <script>
